[tool.poetry]
name = "algorithms-in-python"
version = "0"
description = ""
authors = ["Andrey Alekseev <ilekseev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "algorithms_in_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
