[tool.poetry]
name = "algorithms-in-python"
version = "0"
description = ""
authors = ["Andrey Alekseev <ilekseev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
